--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/Pedrogarcia011/Consulte-Clima#readme",
   "dependencies": {
+    "bootstrap-icons": "^1.10.2",
     "vite": "^3.2.3"
   },
   "devDependencies": {
